1998-04-02  Mikael Djurfeldt  <mdj@nada.kth.se>

	* script.c (scm_compile_shell_switches): Allow NULL argv if argc
	is zero.  (Thanks to Dirk Herrmann.)

1998-03-30  Mikael Djurfeldt  <mdj@nada.kth.se>

	* ports.c (scm_add_to_port_table): First line is now line 0
	(was 1).  (Interface changed according to suggestion by Per
	Bothner.)

	* backtrace.c (display_header): Add 1 to line and column numbers
	when presenting them to the user.

	* eval.h, eval.c, debug.h, debug.c (scm_evaluator_traps): Moved
	from debug.c --> eval.c

	* eval.h, eval.c (scm_eval_options_interface): New options
	interface.
	(SCM_EVAL_STACK): New option: Size of newly created stacks,
	i.e. stacks for new threads.
	
	* coop.c (COOP_STKSIZE): Use SCM_EVAL_STACK.

	* eval.c (unsafe_setjmp): Removed with #if 0.

	* gsubr.c (scm_gsubr_apply): Added dummy return to avoid compiler
	warning.

	* eval.c, numbers.c, unif.c, srcprop.c: Added a few curly braces
	to avoid compiler warnings.

	* dynl-dl.c (sysdep_dynl_func): Only define usymb if needed.

1998-03-28  Mikael Djurfeldt  <mdj@nada.kth.se>

	* throw.c (handler_message): Print message on current error port
	instead of default error port.  (Thanks to Maciej Stachowiak.)

Mon Mar  2 21:35:02 1998  Gary Houston  <ghouston@actrix.gen.nz>

	* ports.c (scm_add_to_port_table): allocate in units of 
	struct scm_port_table *, not struct scm_port_table.
	* posix.c (scm_close_pipe): remove the port from the port table
	and mark as closed.
	Thanks to Rob Engle for both fixes.

1998-02-06  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* iselect.h, iselect.c, coop.c, coop-threads.c, coop-threads.h,
	coop-defs.h, throw.c, backtrace.c: Added new copyright year 1998.

1998-02-02  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* throw.h: Removed jmpbuf arg in scm_catch_body_t.

	* backtrace.c (display_error_body, display_backtrace_body),
	coop-threads.c (scheme_body_bootstrip, c_body_bootstrip),
	gh_eval.c (eval_str_wrapper, eval_file_wrapper), init.c